@@ -2,7 +2,5 @@
 ====
 Always test your code.
 
-* code
-* test
-* always
+You'll thank yourself later.
 ====
